--- a/index.html
+++ b/index.html
@@ -14,23 +14,13 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
+    <nav class="navbar navbar-expand bg-light">
         <div class="container-fluid" style="height: 27px;">
             <a class="navbar-brand" href="#"><img src="img/mattel.png" style="width: 40px;"></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent" style="height: 20px;">
-                <ul class="navbar-nav me-auto mb-lg-0">
-
-                </ul>
-                <form class="d-flex mb-0" role="search">
-                    <input class="form-control me-2 mb-0" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn" type="submit">Search</button>
-                </form>
-            </div>
+            <form class="d-flex mb-0" role="search">
+                <input class="form-control me-2 mb-0" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn" type="submit">Search</button>
+            </form>
         </div>
     </nav>
 
@@ -44,7 +34,7 @@
 
     <div class="container_rosa">
         <div class="contenido_pro">
-            <img src="img/barbieXformula1.png" width="1000px">
+            <img src="img/barbieXformula1.png" class="barbieXformula">
         </div>
     </div>
  
