aver si jala el video

--- a/index.html
+++ b/index.html
@@ -34,10 +34,19 @@
 
     <div class="container_rosa">
         <div class="contenido_pro">
-            <img src="img/barbieXformula1.png" class="barbieXformula">
+            <img src="img/fondo_real.jpg" class="barbieXformula">
         </div>
     </div>
- 
+
+
+    <div class="video_culero container_rosa">
+        <video src="img/barbie_vid.mp4" width="500px" controls style="border-radius: 10px; margin-top: 10px; margin-bottom: 10px;"></video>
+        <div class="botones_pedorros">
+            <a href=""><img src="img/amazon.png" class="amazon"></a>
+            <a href=""><img src="img/mattel.png" class="mattel"></a>
+        </div>
+    </div>
+
     <div class="fixed-bottom">
         <div class="fuder">
             <div class="banderas">
